[gd_scene load_steps=40 format=2]

[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/GamePad.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight36.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight37.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight38.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight39.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight10.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight03.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight05.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight06.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight11.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight42.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight40.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight43.png" type="Texture" id=15]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight41.png" type="Texture" id=16]
[ext_resource path="res://Assets/Sprites/shadedLight/shadedLight44.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight40.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight41.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight37.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight36.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight38.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight39.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight44.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight42.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight43.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight06.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight05.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight03.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprites/shadedLight/pressed_shadedLight10.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprites/gamepad-svgrepo-com.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprites/gamepad-pressed-svgrepo-com.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sounds/click_short.wav" type="AudioStream" id=33]

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.0273894, 0.186722, 0.220703, 1, 0.0343026, 0.499502, 0.615234, 1 )

[sub_resource type="GradientTexture2D" id=6]
gradient = SubResource( 5 )
fill = 1
fill_from = Vector2( 0.508333, 0.471667 )

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.179372, 0.506726, 1 )
colors = PoolColorArray( 1, 1, 1, 0.94902, 1, 1, 1, 0.788235, 1, 1, 1, 0, 0.980392, 0.996078, 1, 0 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 1 )
fill = 1
fill_from = Vector2( 0.5, 0.5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0509804, 0.0901961, 0.129412, 1 )
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20
shadow_color = Color( 0.0588235, 0.435294, 0.529412, 0.360784 )
shadow_size = 19
shadow_offset = Vector2( 0, -1 )
anti_aliasing_size = 0.01

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.0509804, 0.0901961, 0.129412, 1 )
border_color = Color( 0, 0, 0, 0.639216 )
border_blend = true
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 20

[sub_resource type="Animation" id=9]
resource_name = "breathe"

[node name="GamePad" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.321569, 0.321569, 0.321569, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 6 )
expand = true
stretch_mode = 7

[node name="Left Stick" parent="." instance=ExtResource( 1 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 64.0
margin_right = 264.0
margin_bottom = 288.0
__meta__ = {
"_edit_group_": true
}

[node name="Right Stick" parent="." instance=ExtResource( 1 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -361.0
margin_top = -269.0
margin_right = -144.0
margin_bottom = -66.0
__meta__ = {
"_edit_group_": true
}

[node name="Btn_L" type="TextureButton" parent="." groups=["btn"]]
margin_left = 411.0
margin_top = 154.0
margin_right = 475.0
margin_bottom = 218.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 14 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Glow" type="TextureRect" parent="Btn_L"]
modulate = Color( 0.113725, 0.839216, 0.678431, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -60.5
margin_right = 58.0
margin_bottom = 60.5
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="Btn_R" type="TextureButton" parent="." groups=["btn"]]
margin_left = 562.0
margin_top = 160.0
margin_right = 626.0
margin_bottom = 224.0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Glow" type="TextureRect" parent="Btn_R"]
modulate = Color( 0.113725, 0.839216, 0.678431, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -60.5
margin_right = 58.0
margin_bottom = 60.5
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="Btn_Select" type="TextureButton" parent="." groups=["btn"]]
margin_left = 604.0
margin_top = 532.0
margin_right = 668.0
margin_bottom = 596.0
action_mode = 0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Btn_Start" type="TextureButton" parent="." groups=["btn"]]
margin_left = 492.0
margin_top = 532.0
margin_right = 556.0
margin_bottom = 596.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="Btn_Pause" type="TextureButton" parent="." groups=["btn"]]
margin_left = 360.0
margin_top = 530.0
margin_right = 424.0
margin_bottom = 594.0
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="DigitalButtons" type="TextureRect" parent="." groups=["btn_group"]]
margin_left = 715.0
margin_top = 34.0
margin_right = 971.0
margin_bottom = 290.0
stretch_mode = 6
__meta__ = {
"_edit_group_": true
}

[node name="Glow" type="TextureRect" parent="DigitalButtons"]
modulate = Color( 0.0705882, 0.505882, 0.615686, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 140.0
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="Btn_A" type="TextureButton" parent="DigitalButtons" groups=["btn"]]
margin_left = 96.0
margin_top = 152.0
margin_right = 163.0
margin_bottom = 216.0
action_mode = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Btn_B" type="TextureButton" parent="DigitalButtons" groups=["btn"]]
margin_left = 152.0
margin_top = 96.0
margin_right = 216.0
margin_bottom = 160.0
action_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Btn_X" type="TextureButton" parent="DigitalButtons" groups=["btn"]]
margin_left = 40.0
margin_top = 96.0
margin_right = 104.0
margin_bottom = 160.0
action_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Btn_Y" type="TextureButton" parent="DigitalButtons" groups=["btn"]]
margin_left = 96.0
margin_top = 40.0
margin_right = 160.0
margin_bottom = 104.0
action_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="DPad" type="TextureRect" parent="." groups=["btn_group"]]
self_modulate = Color( 0.717647, 0.717647, 0.717647, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 203.0
margin_top = -226.0
margin_right = 358.0
margin_bottom = -71.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true
}

[node name="Glow" type="TextureRect" parent="DPad"]
modulate = Color( 0.121569, 0.67451, 0.737255, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 140.0
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="Dpad_UP" type="TextureButton" parent="DPad" groups=["btn"]]
margin_left = 48.0
margin_right = 109.0
margin_bottom = 76.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 29 )

[node name="Dpad_LEFT" type="TextureButton" parent="DPad" groups=["btn"]]
margin_top = 48.0
margin_right = 76.0
margin_bottom = 109.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 28 )

[node name="Dpad_RIGHT" type="TextureButton" parent="DPad" groups=["btn"]]
margin_left = 80.0
margin_top = 48.0
margin_right = 155.0
margin_bottom = 109.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 27 )

[node name="Dpad_DOWN" type="TextureButton" parent="DPad" groups=["btn"]]
margin_left = 48.0
margin_top = 80.0
margin_right = 109.0
margin_bottom = 155.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 30 )

[node name="PressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
pitch_scale = 0.33

[node name="ReleaseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 33 )
pitch_scale = 0.38

[node name="ControlPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_right = 196.0
margin_bottom = 49.0
custom_styles/panel = SubResource( 7 )

[node name="CircleBg" type="Panel" parent="ControlPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -39.5
margin_right = 45.0
margin_bottom = 50.5
custom_styles/panel = SubResource( 8 )

[node name="Glow2" type="TextureRect" parent="ControlPanel"]
modulate = Color( 0, 0.964706, 1, 0.298039 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.5
margin_top = -80.5
margin_right = 85.5
margin_bottom = 90.5
texture = SubResource( 4 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true
}

[node name="HomeBtn" type="TextureButton" parent="ControlPanel" groups=["btn"]]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.5
margin_top = 6.0
margin_right = 27.5
margin_bottom = 58.0
texture_normal = ExtResource( 31 )
texture_pressed = ExtResource( 32 )
texture_hover = ExtResource( 31 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="Glow" type="TextureRect" parent="ControlPanel/HomeBtn"]
modulate = Color( 0, 0.843137, 0.180392, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.5
margin_top = -49.0
margin_right = 59.5
margin_bottom = 48.0
texture = SubResource( 4 )
expand = true
stretch_mode = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/breathe = SubResource( 9 )

[connection signal="joystick_input_update" from="Left Stick" to="." method="_on_Left_Stick_joystick_input_update"]
[connection signal="joystick_input_update" from="Right Stick" to="." method="_on_Right_Stick_joystick_input_update"]
[connection signal="pressed" from="DPad/Dpad_UP" to="." method="_on_Dpad_UP_pressed"]
[connection signal="pressed" from="DPad/Dpad_LEFT" to="." method="_on_Dpad_LEFT_pressed"]
[connection signal="pressed" from="DPad/Dpad_RIGHT" to="." method="_on_Dpad_RIGHT_pressed"]
[connection signal="pressed" from="DPad/Dpad_DOWN" to="." method="_on_Dpad_DOWN_pressed"]
